// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locale test should render default locale with en_US 1`] = `
<ReactJkMusicPlayer
  audioLists={Array []}
  autoHiddenCover={false}
  autoPlay={true}
  bounds="body"
  className="text-class-name"
  defaultPlayIndex={0}
  defaultPlayMode="order"
  defaultPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  defaultVolume={1}
  drag={true}
  getContainer={[Function]}
  glassBg={false}
  loadAudioErrorPlayNext={true}
  locale="en_US"
  mode="mini"
  onBeforeAudioDownload={[Function]}
  once={false}
  playIndex={0}
  playModeShowTime={600}
  playModeTipVisible={false}
  preload={false}
  remember={false}
  remove={true}
  responsive={true}
  seeked={true}
  showDestroy={true}
  showDownload={true}
  showLyric={true}
  showMediaSession={false}
  showMiniModeCover={true}
  showMiniProcessBar={false}
  showPlay={true}
  showPlayMode={true}
  showProgressLoadBar={true}
  showReload={true}
  showThemeSwitch={true}
  spaceBar={false}
  theme="dark"
  toggleMode={true}
>
  <Portal
    containerInfo={
      <body>
        <div
          class="react-jinke-music-player-main dark-theme text-class-name"
          tabindex="-1"
        >
          <div
            class="react-jinke-music-player react-draggable"
            style="left: 0px; top: 0px; transform: translate(0px,0px);"
            tabindex="-1"
          >
            <div
              class="music-player"
            >
              <div
                class="scale music-player-controller"
                id="music-player-controller"
                style="background-image: url();"
              >
                <span
                  class="controller-title"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m38.6 19.8q0 3.7-1.3 7l-0.4 1.1-4.2 0.7q-0.5 1.9-2 3.1t-3.5 1.2v0.7q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5v0.7q1.6 0 2.9 0.8t2.1 2.2l1.5-0.3q0.7-2.1 0.7-4.3 0-3.3-2-6.3t-5.3-4.6-7-1.8-7.1 1.8-5.2 4.6-2 6.3q0 2.2 0.6 4.3l1.6 0.2q0.7-1.3 2-2.1t2.9-0.8v-0.7q0-0.3 0.2-0.5t0.5-0.2h1.5q0.3 0 0.5 0.2t0.2 0.5v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.5q-0.3 0-0.5-0.2t-0.2-0.5v-0.7q-1.9 0-3.5-1.2t-2-3.1l-4.1-0.7-0.5-1.1q-1.3-3.3-1.3-7 0-3.4 1.5-6.5t4-5.4 5.9-3.7 7.2-1.3 7.1 1.3 6 3.7 4 5.4 1.5 6.5z"
                      />
                    </g>
                  </svg>
                </span>
                <div
                  class="music-player-controller-setting"
                >
                  Open
                </div>
              </div>
              <span
                class="group destroy-btn"
                title="Destroy"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class="audio-lists-panel"
          >
            <div
              class="audio-lists-panel-header"
            >
              <h2
                class="audio-lists-panel-header-title"
              >
                <span>
                  Playlists
                   / 
                </span>
                <span
                  class="audio-lists-panel-header-num"
                >
                  0
                </span>
                <span
                  class="audio-lists-panel-header-close-btn"
                  title="Close"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="audio-lists-panel-header-line"
                />
                <span
                  class="audio-lists-panel-header-delete-btn"
                  title="Delete audio lists"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m15.9 16.4v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.7 0v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.8 0v12.9q0 0.3-0.2 0.5t-0.6 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.4 0 0.6 0.2t0.2 0.5z m2.8 16.2v-21.2h-20v21.2q0 0.5 0.2 0.9t0.3 0.6 0.2 0.2h18.6q0.1 0 0.2-0.2t0.4-0.6 0.1-0.9z m-15-24h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
                      />
                    </g>
                  </svg>
                </span>
              </h2>
            </div>
            <div
              class="audio-lists-panel-content no-content"
            >
              <span>
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m6.6 10v23.4h23.4v3.2h-23.4c-1.8 0-3.2-1.4-3.2-3.2v-23.4h3.2z m23.4 1.6v-3.2h-6.6v9.1c-0.7-0.6-1.6-0.9-2.5-0.9-2.3 0-4.3 2-4.3 4.3s2 4.1 4.3 4.1 4.1-1.9 4.1-4.1v-9.3h5z m3.4-8.2c1.8 0 3.2 1.4 3.2 3.2v20c0 1.8-1.4 3.4-3.2 3.4h-20c-1.8 0-3.4-1.6-3.4-3.4v-20c0-1.8 1.6-3.2 3.4-3.2h20z"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="no-data"
              >
                No music
              </span>
            </div>
          </div>
          <div
            class="play-mode-title"
          >
            Play in order
          </div>
          <audio
            class="music-player-audio"
            src=""
            title=" "
          />
        </div>
      </body>
    }
  >
    <div
      className="react-jinke-music-player-main dark-theme text-class-name"
      tabIndex="-1"
    >
      <Draggable
        allowAnyClick={false}
        axis="both"
        bounds="body"
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        scale={1}
        transform={null}
      >
        <DraggableCore
          allowAnyClick={false}
          cancel={null}
          disabled={false}
          enableUserSelectHack={true}
          grid={null}
          handle={null}
          offsetParent={null}
          onDrag={[Function]}
          onMouseDown={[Function]}
          onStart={[Function]}
          onStop={[Function]}
          scale={1}
          transform={null}
        >
          <div
            className="react-jinke-music-player react-draggable"
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            style={
              Object {
                "left": 0,
                "top": 0,
                "transform": "translate(0px,0px)",
              }
            }
            tabIndex="-1"
            transform={null}
          >
            <div
              className="music-player"
            >
              <div
                className="scale music-player-controller"
                id="music-player-controller"
                style={
                  Object {
                    "backgroundImage": "url()",
                  }
                }
              >
                <span
                  className="controller-title"
                >
                  <FaHeadphones>
                    <IconBase
                      viewBox="0 0 40 40"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        preserveAspectRatio="xMidYMid meet"
                        style={
                          Object {
                            "color": undefined,
                            "verticalAlign": "middle",
                          }
                        }
                        viewBox="0 0 40 40"
                        width="1em"
                      >
                        <g>
                          <path
                            d="m38.6 19.8q0 3.7-1.3 7l-0.4 1.1-4.2 0.7q-0.5 1.9-2 3.1t-3.5 1.2v0.7q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5v0.7q1.6 0 2.9 0.8t2.1 2.2l1.5-0.3q0.7-2.1 0.7-4.3 0-3.3-2-6.3t-5.3-4.6-7-1.8-7.1 1.8-5.2 4.6-2 6.3q0 2.2 0.6 4.3l1.6 0.2q0.7-1.3 2-2.1t2.9-0.8v-0.7q0-0.3 0.2-0.5t0.5-0.2h1.5q0.3 0 0.5 0.2t0.2 0.5v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.5q-0.3 0-0.5-0.2t-0.2-0.5v-0.7q-1.9 0-3.5-1.2t-2-3.1l-4.1-0.7-0.5-1.1q-1.3-3.3-1.3-7 0-3.4 1.5-6.5t4-5.4 5.9-3.7 7.2-1.3 7.1 1.3 6 3.7 4 5.4 1.5 6.5z"
                          />
                        </g>
                      </svg>
                    </IconBase>
                  </FaHeadphones>
                </span>
                <div
                  className="music-player-controller-setting"
                >
                  Open
                </div>
              </div>
              <span
                className="group destroy-btn"
                title="Destroy"
              >
                <MdClose>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </MdClose>
              </span>
            </div>
          </div>
        </DraggableCore>
      </Draggable>
      <AudioListsPanel
        audioLists={Array []}
        audioListsDragEnd={[Function]}
        closeIcon={<MdClose />}
        cover=""
        deleteIcon={<FaTrashO />}
        glassBg={false}
        isMobile={false}
        locale={
          Object {
            "clickToDeleteText": [Function],
            "clickToPauseText": "Click to pause",
            "clickToPlayText": "Click to play",
            "closeText": "Close",
            "controllerTitle": <FaHeadphones />,
            "darkThemeText": "D",
            "destroyText": "Destroy",
            "downloadText": "Download",
            "emptyLyricText": "No lyric",
            "lightThemeText": "L",
            "nextTrackText": "Next track",
            "notContentText": "No music",
            "openText": "Open",
            "playListsText": "Playlists",
            "playModeText": Object {
              "order": "Play in order",
              "orderLoop": "List loop",
              "shufflePlay": "Shuffle playback",
              "singleLoop": "Single loop",
            },
            "previousTrackText": "Previous track",
            "reloadText": "Reload",
            "removeAudioListsText": "Delete audio lists",
            "switchThemeText": "Dark/Light mode",
            "toggleLyricText": "Toggle lyric",
            "toggleMiniModeText": "Minimize",
            "volumeText": "Volume",
          }
        }
        onCancel={[Function]}
        onDelete={[Function]}
        onPlay={[Function]}
        panelToggleAnimate={
          Object {
            "show": false,
          }
        }
        pause={true}
        pauseIcon={<AnimatePauseIcon />}
        playIcon={<AnimatePlayIcon />}
        playId=""
        remove={true}
        removeId={-1}
        visible={false}
      >
        <div
          className="audio-lists-panel"
        >
          <div
            className="audio-lists-panel-header"
          >
            <h2
              className="audio-lists-panel-header-title"
            >
              <span>
                Playlists
                 / 
              </span>
              <span
                className="audio-lists-panel-header-num"
              >
                0
              </span>
              <span
                className="audio-lists-panel-header-close-btn"
                onClick={[Function]}
                title="Close"
              >
                <MdClose>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </MdClose>
              </span>
              <span
                className="audio-lists-panel-header-line"
              />
              <span
                className="audio-lists-panel-header-delete-btn"
                onClick={[Function]}
                title="Delete audio lists"
              >
                <FaTrashO>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m15.9 16.4v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.7 0v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.8 0v12.9q0 0.3-0.2 0.5t-0.6 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.4 0 0.6 0.2t0.2 0.5z m2.8 16.2v-21.2h-20v21.2q0 0.5 0.2 0.9t0.3 0.6 0.2 0.2h18.6q0.1 0 0.2-0.2t0.4-0.6 0.1-0.9z m-15-24h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </FaTrashO>
              </span>
            </h2>
          </div>
          <div
            className="audio-lists-panel-content no-content"
          >
            <span>
              <MdLibraryMusic>
                <IconBase
                  viewBox="0 0 40 40"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "color": undefined,
                        "verticalAlign": "middle",
                      }
                    }
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m6.6 10v23.4h23.4v3.2h-23.4c-1.8 0-3.2-1.4-3.2-3.2v-23.4h3.2z m23.4 1.6v-3.2h-6.6v9.1c-0.7-0.6-1.6-0.9-2.5-0.9-2.3 0-4.3 2-4.3 4.3s2 4.1 4.3 4.1 4.1-1.9 4.1-4.1v-9.3h5z m3.4-8.2c1.8 0 3.2 1.4 3.2 3.2v20c0 1.8-1.4 3.4-3.2 3.4h-20c-1.8 0-3.4-1.6-3.4-3.4v-20c0-1.8 1.6-3.2 3.4-3.2h20z"
                      />
                    </g>
                  </svg>
                </IconBase>
              </MdLibraryMusic>
            </span>
            <span
              className="no-data"
            >
              No music
            </span>
          </div>
        </div>
      </AudioListsPanel>
      <PlayModel
        value="Play in order"
        visible={false}
      >
        <div
          className="play-mode-title"
        >
          Play in order
        </div>
      </PlayModel>
      <audio
        className="music-player-audio"
        src=""
        title=" "
      />
    </div>
  </Portal>
</ReactJkMusicPlayer>
`;

exports[`Locale test should render locale with zh_CN 1`] = `
<ReactJkMusicPlayer
  audioLists={Array []}
  autoHiddenCover={false}
  autoPlay={true}
  bounds="body"
  className="text-class-name"
  defaultPlayIndex={0}
  defaultPlayMode="order"
  defaultPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  defaultVolume={1}
  drag={true}
  getContainer={[Function]}
  glassBg={false}
  loadAudioErrorPlayNext={true}
  locale="zh_CN"
  mode="mini"
  onBeforeAudioDownload={[Function]}
  once={false}
  playIndex={0}
  playModeShowTime={600}
  playModeTipVisible={false}
  preload={false}
  remember={false}
  remove={true}
  responsive={true}
  seeked={true}
  showDestroy={true}
  showDownload={true}
  showLyric={true}
  showMediaSession={false}
  showMiniModeCover={true}
  showMiniProcessBar={false}
  showPlay={true}
  showPlayMode={true}
  showProgressLoadBar={true}
  showReload={true}
  showThemeSwitch={true}
  spaceBar={false}
  theme="dark"
  toggleMode={true}
>
  <Portal
    containerInfo={
      <body>
        <div
          class="react-jinke-music-player-main dark-theme text-class-name"
          tabindex="-1"
        >
          <div
            class="react-jinke-music-player react-draggable"
            style="left: 0px; top: 0px; transform: translate(0px,0px);"
            tabindex="-1"
          >
            <div
              class="music-player"
            >
              <div
                class="scale music-player-controller"
                id="music-player-controller"
                style="background-image: url();"
              >
                <span
                  class="controller-title"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m38.6 19.8q0 3.7-1.3 7l-0.4 1.1-4.2 0.7q-0.5 1.9-2 3.1t-3.5 1.2v0.7q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5v0.7q1.6 0 2.9 0.8t2.1 2.2l1.5-0.3q0.7-2.1 0.7-4.3 0-3.3-2-6.3t-5.3-4.6-7-1.8-7.1 1.8-5.2 4.6-2 6.3q0 2.2 0.6 4.3l1.6 0.2q0.7-1.3 2-2.1t2.9-0.8v-0.7q0-0.3 0.2-0.5t0.5-0.2h1.5q0.3 0 0.5 0.2t0.2 0.5v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.5q-0.3 0-0.5-0.2t-0.2-0.5v-0.7q-1.9 0-3.5-1.2t-2-3.1l-4.1-0.7-0.5-1.1q-1.3-3.3-1.3-7 0-3.4 1.5-6.5t4-5.4 5.9-3.7 7.2-1.3 7.1 1.3 6 3.7 4 5.4 1.5 6.5z"
                      />
                    </g>
                  </svg>
                </span>
                <div
                  class="music-player-controller-setting"
                >
                  Open
                </div>
              </div>
              <span
                class="group destroy-btn"
                title="Destroy"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class="audio-lists-panel"
          >
            <div
              class="audio-lists-panel-header"
            >
              <h2
                class="audio-lists-panel-header-title"
              >
                <span>
                  Playlists
                   / 
                </span>
                <span
                  class="audio-lists-panel-header-num"
                >
                  0
                </span>
                <span
                  class="audio-lists-panel-header-close-btn"
                  title="Close"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="audio-lists-panel-header-line"
                />
                <span
                  class="audio-lists-panel-header-delete-btn"
                  title="Delete audio lists"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m15.9 16.4v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.7 0v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.8 0v12.9q0 0.3-0.2 0.5t-0.6 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.4 0 0.6 0.2t0.2 0.5z m2.8 16.2v-21.2h-20v21.2q0 0.5 0.2 0.9t0.3 0.6 0.2 0.2h18.6q0.1 0 0.2-0.2t0.4-0.6 0.1-0.9z m-15-24h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
                      />
                    </g>
                  </svg>
                </span>
              </h2>
            </div>
            <div
              class="audio-lists-panel-content no-content"
            >
              <span>
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m6.6 10v23.4h23.4v3.2h-23.4c-1.8 0-3.2-1.4-3.2-3.2v-23.4h3.2z m23.4 1.6v-3.2h-6.6v9.1c-0.7-0.6-1.6-0.9-2.5-0.9-2.3 0-4.3 2-4.3 4.3s2 4.1 4.3 4.1 4.1-1.9 4.1-4.1v-9.3h5z m3.4-8.2c1.8 0 3.2 1.4 3.2 3.2v20c0 1.8-1.4 3.4-3.2 3.4h-20c-1.8 0-3.4-1.6-3.4-3.4v-20c0-1.8 1.6-3.2 3.4-3.2h20z"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="no-data"
              >
                No music
              </span>
            </div>
          </div>
          <div
            class="play-mode-title"
          >
            Play in order
          </div>
          <audio
            class="music-player-audio"
            src=""
            title=" "
          />
        </div>
        <div
          class="react-jinke-music-player-main dark-theme text-class-name"
          tabindex="-1"
        >
          <div
            class="react-jinke-music-player react-draggable"
            style="left: 0px; top: 0px; transform: translate(0px,0px);"
            tabindex="-1"
          >
            <div
              class="music-player"
            >
              <div
                class="scale music-player-controller"
                id="music-player-controller"
                style="background-image: url();"
              >
                <span
                  class="controller-title"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m38.6 19.8q0 3.7-1.3 7l-0.4 1.1-4.2 0.7q-0.5 1.9-2 3.1t-3.5 1.2v0.7q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5v0.7q1.6 0 2.9 0.8t2.1 2.2l1.5-0.3q0.7-2.1 0.7-4.3 0-3.3-2-6.3t-5.3-4.6-7-1.8-7.1 1.8-5.2 4.6-2 6.3q0 2.2 0.6 4.3l1.6 0.2q0.7-1.3 2-2.1t2.9-0.8v-0.7q0-0.3 0.2-0.5t0.5-0.2h1.5q0.3 0 0.5 0.2t0.2 0.5v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.5q-0.3 0-0.5-0.2t-0.2-0.5v-0.7q-1.9 0-3.5-1.2t-2-3.1l-4.1-0.7-0.5-1.1q-1.3-3.3-1.3-7 0-3.4 1.5-6.5t4-5.4 5.9-3.7 7.2-1.3 7.1 1.3 6 3.7 4 5.4 1.5 6.5z"
                      />
                    </g>
                  </svg>
                </span>
                <div
                  class="music-player-controller-setting"
                >
                  打开
                </div>
              </div>
              <span
                class="group destroy-btn"
                title="移除播放器"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class="audio-lists-panel"
          >
            <div
              class="audio-lists-panel-header"
            >
              <h2
                class="audio-lists-panel-header-title"
              >
                <span>
                  播放列表
                   / 
                </span>
                <span
                  class="audio-lists-panel-header-num"
                >
                  0
                </span>
                <span
                  class="audio-lists-panel-header-close-btn"
                  title="关闭"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="audio-lists-panel-header-line"
                />
                <span
                  class="audio-lists-panel-header-delete-btn"
                  title="清空播放列表"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m15.9 16.4v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.7 0v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.8 0v12.9q0 0.3-0.2 0.5t-0.6 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.4 0 0.6 0.2t0.2 0.5z m2.8 16.2v-21.2h-20v21.2q0 0.5 0.2 0.9t0.3 0.6 0.2 0.2h18.6q0.1 0 0.2-0.2t0.4-0.6 0.1-0.9z m-15-24h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
                      />
                    </g>
                  </svg>
                </span>
              </h2>
            </div>
            <div
              class="audio-lists-panel-content no-content"
            >
              <span>
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m6.6 10v23.4h23.4v3.2h-23.4c-1.8 0-3.2-1.4-3.2-3.2v-23.4h3.2z m23.4 1.6v-3.2h-6.6v9.1c-0.7-0.6-1.6-0.9-2.5-0.9-2.3 0-4.3 2-4.3 4.3s2 4.1 4.3 4.1 4.1-1.9 4.1-4.1v-9.3h5z m3.4-8.2c1.8 0 3.2 1.4 3.2 3.2v20c0 1.8-1.4 3.4-3.2 3.4h-20c-1.8 0-3.4-1.6-3.4-3.4v-20c0-1.8 1.6-3.2 3.4-3.2h20z"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="no-data"
              >
                音乐播放列表为空
              </span>
            </div>
          </div>
          <div
            class="play-mode-title"
          >
            顺序播放
          </div>
          <audio
            class="music-player-audio"
            src=""
            title=" "
          />
        </div>
      </body>
    }
  >
    <div
      className="react-jinke-music-player-main dark-theme text-class-name"
      tabIndex="-1"
    >
      <Draggable
        allowAnyClick={false}
        axis="both"
        bounds="body"
        cancel={null}
        defaultClassName="react-draggable"
        defaultClassNameDragged="react-draggable-dragged"
        defaultClassNameDragging="react-draggable-dragging"
        defaultPosition={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        position={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        scale={1}
        transform={null}
      >
        <DraggableCore
          allowAnyClick={false}
          cancel={null}
          disabled={false}
          enableUserSelectHack={true}
          grid={null}
          handle={null}
          offsetParent={null}
          onDrag={[Function]}
          onMouseDown={[Function]}
          onStart={[Function]}
          onStop={[Function]}
          scale={1}
          transform={null}
        >
          <div
            className="react-jinke-music-player react-draggable"
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            style={
              Object {
                "left": 0,
                "top": 0,
                "transform": "translate(0px,0px)",
              }
            }
            tabIndex="-1"
            transform={null}
          >
            <div
              className="music-player"
            >
              <div
                className="scale music-player-controller"
                id="music-player-controller"
                style={
                  Object {
                    "backgroundImage": "url()",
                  }
                }
              >
                <span
                  className="controller-title"
                >
                  <FaHeadphones>
                    <IconBase
                      viewBox="0 0 40 40"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        preserveAspectRatio="xMidYMid meet"
                        style={
                          Object {
                            "color": undefined,
                            "verticalAlign": "middle",
                          }
                        }
                        viewBox="0 0 40 40"
                        width="1em"
                      >
                        <g>
                          <path
                            d="m38.6 19.8q0 3.7-1.3 7l-0.4 1.1-4.2 0.7q-0.5 1.9-2 3.1t-3.5 1.2v0.7q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5v0.7q1.6 0 2.9 0.8t2.1 2.2l1.5-0.3q0.7-2.1 0.7-4.3 0-3.3-2-6.3t-5.3-4.6-7-1.8-7.1 1.8-5.2 4.6-2 6.3q0 2.2 0.6 4.3l1.6 0.2q0.7-1.3 2-2.1t2.9-0.8v-0.7q0-0.3 0.2-0.5t0.5-0.2h1.5q0.3 0 0.5 0.2t0.2 0.5v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.5q-0.3 0-0.5-0.2t-0.2-0.5v-0.7q-1.9 0-3.5-1.2t-2-3.1l-4.1-0.7-0.5-1.1q-1.3-3.3-1.3-7 0-3.4 1.5-6.5t4-5.4 5.9-3.7 7.2-1.3 7.1 1.3 6 3.7 4 5.4 1.5 6.5z"
                          />
                        </g>
                      </svg>
                    </IconBase>
                  </FaHeadphones>
                </span>
                <div
                  className="music-player-controller-setting"
                >
                  打开
                </div>
              </div>
              <span
                className="group destroy-btn"
                title="移除播放器"
              >
                <MdClose>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </MdClose>
              </span>
            </div>
          </div>
        </DraggableCore>
      </Draggable>
      <AudioListsPanel
        audioLists={Array []}
        audioListsDragEnd={[Function]}
        closeIcon={<MdClose />}
        cover=""
        deleteIcon={<FaTrashO />}
        glassBg={false}
        isMobile={false}
        locale={
          Object {
            "clickToDeleteText": [Function],
            "clickToPauseText": "点击暂停",
            "clickToPlayText": "点击播放",
            "closeText": "关闭",
            "controllerTitle": <FaHeadphones />,
            "darkThemeText": "暗",
            "destroyText": "移除播放器",
            "downloadText": "下载",
            "emptyLyricText": "暂无歌词",
            "lightThemeText": "亮",
            "nextTrackText": "下一首",
            "notContentText": "音乐播放列表为空",
            "openText": "打开",
            "playListsText": "播放列表",
            "playModeText": Object {
              "order": "顺序播放",
              "orderLoop": "列表循环",
              "shufflePlay": "随机播放",
              "singleLoop": "单曲循环",
            },
            "previousTrackText": "上一首",
            "reloadText": "重新播放",
            "removeAudioListsText": "清空播放列表",
            "switchThemeText": "暗黑/明亮 主题",
            "toggleLyricText": "显示/隐藏 歌词",
            "toggleMiniModeText": "切换至迷你模式",
            "volumeText": "音量",
          }
        }
        onCancel={[Function]}
        onDelete={[Function]}
        onPlay={[Function]}
        panelToggleAnimate={
          Object {
            "show": false,
          }
        }
        pause={true}
        pauseIcon={<AnimatePauseIcon />}
        playIcon={<AnimatePlayIcon />}
        playId=""
        remove={true}
        removeId={-1}
        visible={false}
      >
        <div
          className="audio-lists-panel"
        >
          <div
            className="audio-lists-panel-header"
          >
            <h2
              className="audio-lists-panel-header-title"
            >
              <span>
                播放列表
                 / 
              </span>
              <span
                className="audio-lists-panel-header-num"
              >
                0
              </span>
              <span
                className="audio-lists-panel-header-close-btn"
                onClick={[Function]}
                title="关闭"
              >
                <MdClose>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m31.6 10.7l-9.3 9.3 9.3 9.3-2.3 2.3-9.3-9.3-9.3 9.3-2.3-2.3 9.3-9.3-9.3-9.3 2.3-2.3 9.3 9.3 9.3-9.3z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </MdClose>
              </span>
              <span
                className="audio-lists-panel-header-line"
              />
              <span
                className="audio-lists-panel-header-delete-btn"
                onClick={[Function]}
                title="清空播放列表"
              >
                <FaTrashO>
                  <IconBase
                    viewBox="0 0 40 40"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m15.9 16.4v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.7 0v12.9q0 0.3-0.2 0.5t-0.5 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.3 0 0.5 0.2t0.2 0.5z m5.8 0v12.9q0 0.3-0.2 0.5t-0.6 0.2h-1.4q-0.3 0-0.5-0.2t-0.2-0.5v-12.9q0-0.3 0.2-0.5t0.5-0.2h1.4q0.4 0 0.6 0.2t0.2 0.5z m2.8 16.2v-21.2h-20v21.2q0 0.5 0.2 0.9t0.3 0.6 0.2 0.2h18.6q0.1 0 0.2-0.2t0.4-0.6 0.1-0.9z m-15-24h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
                        />
                      </g>
                    </svg>
                  </IconBase>
                </FaTrashO>
              </span>
            </h2>
          </div>
          <div
            className="audio-lists-panel-content no-content"
          >
            <span>
              <MdLibraryMusic>
                <IconBase
                  viewBox="0 0 40 40"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "color": undefined,
                        "verticalAlign": "middle",
                      }
                    }
                    viewBox="0 0 40 40"
                    width="1em"
                  >
                    <g>
                      <path
                        d="m6.6 10v23.4h23.4v3.2h-23.4c-1.8 0-3.2-1.4-3.2-3.2v-23.4h3.2z m23.4 1.6v-3.2h-6.6v9.1c-0.7-0.6-1.6-0.9-2.5-0.9-2.3 0-4.3 2-4.3 4.3s2 4.1 4.3 4.1 4.1-1.9 4.1-4.1v-9.3h5z m3.4-8.2c1.8 0 3.2 1.4 3.2 3.2v20c0 1.8-1.4 3.4-3.2 3.4h-20c-1.8 0-3.4-1.6-3.4-3.4v-20c0-1.8 1.6-3.2 3.4-3.2h20z"
                      />
                    </g>
                  </svg>
                </IconBase>
              </MdLibraryMusic>
            </span>
            <span
              className="no-data"
            >
              音乐播放列表为空
            </span>
          </div>
        </div>
      </AudioListsPanel>
      <PlayModel
        value="顺序播放"
        visible={false}
      >
        <div
          className="play-mode-title"
        >
          顺序播放
        </div>
      </PlayModel>
      <audio
        className="music-player-audio"
        src=""
        title=" "
      />
    </div>
  </Portal>
</ReactJkMusicPlayer>
`;
